# SpeechAnonymiser

./: .gitignore  Animator.cpp  CMakeLists.txt  CMakeSettings.json  ClassifierHelper.cpp  ClassifierHelper.h  Dataset.cpp  Dataset.h  JSONHelper.cpp  JSONHelper.h  Logger.cpp  Matrix.cpp  Matrix.h  ModelSerializer.cpp  ModelSerializer.h  NeuralNetwork.cpp  NeuralNetwork.h  PhonemeClassifier.cpp  PhonemeClassifier.h  README.md  SpeechAnonymiser.cpp  SpeechAnonymiser.filters  SpeechAnonymiser.sln  SpeechAnonymiser.vcxproj  SpeechEngine.cpp  SpeechEngine.h  TSVReader.cpp  TSVReader.h  Visualizer.cpp  Visualizer.h  VoiceProject.cpp  VoiceProject.sln  VoiceProject.vcxproj  VoiceProject.vcxproj.filters  VulkanWindow.cpp  VulkanWindow.h  build.bat  build.sh  common_inc.h  define.h  (+3 more)
configs/: alias_dictionary.json  phoneme-collections.json  phoneme-set-ARPABET.json  phoneme-set-CVClassifier.json  phoneme-set-ConcatSE.json  phoneme-set-IPA.json  phoneme-set-TIMITClassifier.json  phoneme_maps.json  similarity-matrix.txt
configs/animations/phonemes/: 0_anim.json  _anim.json  a_anim.json  ae_anim.json  aj_anim.json  aw_anim.json  b_anim.json  c_anim.json  d_anim.json  du_anim.json  dz_anim.json  e_anim.json  eh_anim.json  f_anim.json  g_anim.json  h_anim.json  i_anim.json  j_anim.json  k_anim.json  l_anim.json  m_anim.json  mj_anim.json  n_anim.json  ny_anim.json  o_anim.json  oo_anim.json  p_anim.json  r_anim.json  s_anim.json  sh_anim.json  t__anim.json  t_anim.json  tf_anim.json  th_anim.json  u_anim.json  uh_anim.json  v_anim.json  w_anim.json  z_anim.json
configs/articulators/: base_frequency.json  lip.json  pressure.json  system_pressure.json  tongue_mid.json
configs/formants/: formants.json
custom_ports/bandicoot/: cmake-config.patch  dependencies.patch  pkgconfig.patch  portfile.cmake  usage  vcpkg.json
custom_ports/mlpack/: access-loss.diff  lstm-fix.diff  portfile.cmake  single-rnn.diff
custom_ports/openblas/: portfile.cmake  zen5.diff
docker/: Dockerfile  README.md  compose.yaml
shaders/: compileshaders.bat  compileshaders.sh  shader.vert  shader_horizontal.vert  shader_vertical.vert
src/: Animator.cpp  Animator.h  Animator.hpp  ClassifierHelper.cpp  ClassifierHelper.h  ClassifierHelper.hpp  Clip.cpp  Clip.hpp  Config.cpp  Config.h  Config.hpp  Dataset.cpp  Dataset.h  Dataset.hpp  Global.cpp  Global.h  Global.hpp  JSONHelper.cpp  JSONHelper.h  JSONHelper.hpp  Logger.cpp  Logger.h  Logger.hpp  ModelSerializer.cpp  ModelSerializer.h  ModelSerializer.hpp  ParallelWorker.h  ParallelWorker.hpp  PhonemeClassifier.cpp  PhonemeClassifier.h  PhonemeClassifier.hpp  PhonemeModel.cpp  PhonemeModel.h  PhonemeModel.hpp  PhonemeSet.cpp  PhonemeSet.h  PhonemeSet.hpp  RtAudioWrapper.h  SpeechAnonymiser.cpp  SpeechEngine.h  (+33 more)
src/Classifier/: AutoregressivePredictiveCoding.cpp  AutoregressivePredictiveCoding.hpp  ModelSerializer.cpp  ModelSerializer.hpp  PhonemeClassifier.cpp  PhonemeClassifier.hpp  PhonemeModel.cpp  PhonemeModel.hpp  TrainingExec.hpp  negative_log_likelihood_w.hpp  negative_log_likelihood_w_impl.hpp
src/Classifier/Train/: CVIterator.cpp  CVIterator.hpp  Clip.cpp  Clip.hpp  Dataset.cpp  Dataset.hpp  DatasetIterator.hpp  DatasetTypes.hpp  LossLogger.hpp  TSVReader.cpp  TSVReader.hpp  TimitIterator.cpp  TimitIterator.hpp  eta_callback.hpp
src/Debugging/: InteractiveDebugger.cpp  InteractiveDebugger.hpp
src/GUI/: Spectrogram.cpp  Spectrogram.hpp  Visualizer.cpp  Visualizer.hpp
src/SpeechEngine/: Animator.cpp  Animator.hpp  SpeechEngine.hpp  SpeechEngineArticulator.cpp  SpeechEngineArticulator.hpp  SpeechEngineConcatenator.cpp  SpeechEngineConcatenator.hpp  SpeechEngineFormant.cpp  SpeechEngineFormant.hpp  Voicebank.cpp  Voicebank.hpp
src/Utils/: ClassifierHelper.cpp  ClassifierHelper.hpp  Config.cpp  Config.hpp  Global.cpp  Global.hpp  JSONHelper.cpp  JSONHelper.hpp  Logger.cpp  Logger.hpp  ParallelWorker.hpp  PhonemeCollection.cpp  PhonemeCollection.hpp  PhonemeSet.cpp  PhonemeSet.hpp  TSVReader.cpp  TSVReader.hpp  TranslationMap.cpp  TranslationMap.hpp  Util.cpp  Util.hpp  UtilImpl.hpp
